--- a/index.html
+++ b/index.html
@@ -113,6 +113,8 @@ document.domain = 'mp.9g.com';
   <div class="ft-copy">
   <p align="center"><span>©2023 微信号</span>  <a href="javascript:void(0);" sid="261361729" title="关注" class="wsqFollowDiv">xjxwx01</a> <script src="http://dzqun.gtimg.cn/quan/scripts/widgets/follow.js" charset="utf-8"></script> </div>
 </footer>
+<div><p><img src="\zsma.jpg"" width="800px";height="800px";</p>
+    </div>
 <div style="display:none">
 <script type="text/javascript">
 var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
