--- a/index.html
+++ b/index.html
@@ -113,19 +113,8 @@ document.domain = 'mp.9g.com';
   <div class="ft-copy">
   <p align="center"><span>©2023 微信号</span>  <a href="javascript:void(0);" sid="261361729" title="关注" class="wsqFollowDiv">xjxwx01</a> <script src="http://dzqun.gtimg.cn/quan/scripts/widgets/follow.js" charset="utf-8"></script> </div>
 </footer>
-<div><p><img src="\zsma.jpg"" width="800px";height="800px";</p>
+<div><p align="center"><img src="https://github.com/JXXei/Xie/blob/main/zsma.jpg?raw=true"</p>
     </div>
-<div style="display:none">
-<script type="text/javascript">
-var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
-document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3Ffc3d1b16f12d4cf3bd05fde0de4fed15' type='text/javascript'%3E%3C/script%3E"));
-</script>
-
-
-
-
-
-
 </div> 
 <br>
 <br>
@@ -156,340 +145,9 @@ document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3
   玩游戏</td>
 <td id="fix_footer_menu_on" onClick="window.location=&#39;https://space.bilibili.com/388476908/ceshi&#39;" align="center"><img src="./img/index1/nav_5.png" height="25"><br>
 小测试</td>
-<td id="fix_footer_menu" onClick="window.location=&#39;https://space.bilibili.com/388476908&#39;"&#39;" align="center"><img src="./img/index1/nav_2.png" height="25"><br>
+<td id="fix_footer_menu" onClick="window.location=&#39;http://ykf.nick02.cc/index.php&#39;"&#39;" align="center"><img src="./img/index1/nav_2.png" height="25"><br>
 微社区</td>
 </tr>
 </tbody></table>
 </div>
-<!--  -->
-/* 修改每个游戏的虚拟人气*/
-<script>
-    var timestamp = (Date.parse(new Date())/1000) + (3900*5);
-    document.getElementById("a").innerHTML = timestamp%864000;
-</script>
-
-<script>
-    var timestamp = (Date.parse(new Date())/1000) + (3701*7);
-    document.getElementById("1").innerHTML = timestamp%864000;
-</script>
-
-<script>
-    var timestamp = (Date.parse(new Date())/1000) + (3602*8);
-    document.getElementById("2").innerHTML = timestamp%864000;
-</script>
-
-<script>
-    var timestamp = (Date.parse(new Date())/1000) + (36110*8);
-    document.getElementById("3").innerHTML = timestamp%864000;
-</script>
-
-
-<script>
-    var timestamp = (Date.parse(new Date())/1000) + (3602*8);
-    document.getElementById("4").innerHTML = timestamp%864000;
-</script>
-
-<script>
-    var timestamp = (Date.parse(new Date())/1000) + (3622*8);
-    document.getElementById("5").innerHTML = timestamp%864000;
-</script>
-
-<script>
-    var timestamp = (Date.parse(new Date())/1000) + (3612*8);
-    document.getElementById("6").innerHTML = timestamp%864000;
-</script>
-
-
-<script>
-    var timestamp = (Date.parse(new Date())/1000) + (3632*8);
-    document.getElementById("7").innerHTML = timestamp%864000;
-</script>
-
-<script>
-    var timestamp = (Date.parse(new Date())/1000) + (3642*8);
-    document.getElementById("8").innerHTML = timestamp%864000;
-</script>
-
-<script>
-    var timestamp = (Date.parse(new Date())/1000) + (3682*8);
-    document.getElementById("9").innerHTML = timestamp%864000;
-</script>
-
-<script>
-    var timestamp = (Date.parse(new Date())/1000) + (3102*8);
-    document.getElementById("10").innerHTML = timestamp%864000;
-</script>
-
-<script>
-    var timestamp = (Date.parse(new Date())/1000) + (3122*8);
-    document.getElementById("11").innerHTML = timestamp%864000;
-</script>
-
-<script>
-    var timestamp = (Date.parse(new Date())/1000) + (3652*8);
-    document.getElementById("12").innerHTML = timestamp%864000;
-</script>
-
-<script>
-    var timestamp = (Date.parse(new Date())/1000) + (3642*8);
-    document.getElementById("13").innerHTML = timestamp%864000;
-</script>
-
-<script>
-    var timestamp = (Date.parse(new Date())/1000) + (3612*8);
-    document.getElementById("14").innerHTML = timestamp%864000;
-</script>
-
-<script>
-    var timestamp = (Date.parse(new Date())/1000) + (3642*8);
-    document.getElementById("15").innerHTML = timestamp%864000;
-</script>
-
-<script>
-    var timestamp = (Date.parse(new Date())/1000) + (3611*8);
-    document.getElementById("16").innerHTML = timestamp%864000;
-</script>
-
-<script>
-    var timestamp = (Date.parse(new Date())/1000) + (3602*8);
-    document.getElementById("17").innerHTML = timestamp%864000;
-</script>
-
-<script>
-    var timestamp = (Date.parse(new Date())/1000) + (3702*8);
-    document.getElementById("18").innerHTML = timestamp%864000;
-</script>
-
-<script>
-    var timestamp = (Date.parse(new Date())/1000) + (3612*8);
-    document.getElementById("19").innerHTML = timestamp%864000;
-</script>
-
-<script>
-    var timestamp = (Date.parse(new Date())/1000) + (3612*8);
-    document.getElementById("20").innerHTML = timestamp%864000;
-</script>
-
-<script>
-    var timestamp = (Date.parse(new Date())/1000) + (3611*8);
-    document.getElementById("21").innerHTML = timestamp%864000;
-</script>
-
-<script>
-    var timestamp = (Date.parse(new Date())/1000) + (3514*8);
-    document.getElementById("22").innerHTML = timestamp%864000;
-</script>
-
-<script>
-    var timestamp = (Date.parse(new Date())/1000) + (3214*8);
-    document.getElementById("23").innerHTML = timestamp%864000;
-</script>
-
-<script>
-    var timestamp = (Date.parse(new Date())/1000) + (3234*8);
-    document.getElementById("24").innerHTML = timestamp%864000;
-</script>
-<script>
-    var timestamp = (Date.parse(new Date())/1000) + (3234*8);
-    document.getElementById("25").innerHTML = timestamp%864000;
-</script>
-
-<script>
-    var timestamp = (Date.parse(new Date())/1000) + (3234*8);
-    document.getElementById("26").innerHTML = timestamp%864000;
-</script>
-
-<script>
-    var timestamp = (Date.parse(new Date())/1000) + (3134*8);
-    document.getElementById("27").innerHTML = timestamp%864000;
-</script>
-
-<script>
-    var timestamp = (Date.parse(new Date())/1000) + (3134*8);
-    document.getElementById("28").innerHTML = timestamp%864000;
-</script>
-<script>
-    var timestamp = (Date.parse(new Date())/1000) + (3134*8);
-    document.getElementById("29").innerHTML = timestamp%864000;
-</script>
-
-<script>
-    var timestamp = (Date.parse(new Date())/1000) + (2134*8);
-    document.getElementById("30").innerHTML = timestamp%864000;
-</script>
-
-<script>
-    var timestamp = (Date.parse(new Date())/1000) + (2134*8);
-    document.getElementById("31").innerHTML = timestamp%864000;
-</script>
-
-<script>
-    var timestamp = (Date.parse(new Date())/1000) + (4134*8);
-    document.getElementById("32").innerHTML = timestamp%864000;
-</script>
-
-<script>
-    var timestamp = (Date.parse(new Date())/1000) + (4124*8);
-    document.getElementById("33").innerHTML = timestamp%864000;
-</script>
-
-<script>
-    var timestamp = (Date.parse(new Date())/1000) + (4234*8);
-    document.getElementById("34").innerHTML = timestamp%864000;
-</script>
-
-<script>
-    var timestamp = (Date.parse(new Date())/1000) + (3134*8);
-    document.getElementById("35").innerHTML = timestamp%864000;
-</script>
-
-<script>
-    var timestamp = (Date.parse(new Date())/1000) + (3134*8);
-    document.getElementById("36").innerHTML = timestamp%864000;
-</script>
-
-<script>
-    var timestamp = (Date.parse(new Date())/1000) + (3114*8);
-    document.getElementById("37").innerHTML = timestamp%864000;
-</script>
-
-<script>
-    var timestamp = (Date.parse(new Date())/1000) + (3114*8);
-    document.getElementById("38").innerHTML = timestamp%864000;
-</script>
-<script>
-    var timestamp = (Date.parse(new Date())/1000) + (3114*8);
-    document.getElementById("39").innerHTML = timestamp%864000;
-</script>
-
-<script>
-    var timestamp = (Date.parse(new Date())/1000) + (3114*8);
-    document.getElementById("40").innerHTML = timestamp%864000;
-</script>
-
-<script>
-    var timestamp = (Date.parse(new Date())/1000) + (3114*8);
-    document.getElementById("41").innerHTML = timestamp%864000;
-</script>
-
-<script>
-    var timestamp = (Date.parse(new Date())/1000) + (3114*8);
-    document.getElementById("42").innerHTML = timestamp%864000;
-</script>
-<script>
-    var timestamp = (Date.parse(new Date())/1000) + (3114*8);
-    document.getElementById("43").innerHTML = timestamp%864000;
-</script>
-<script>
-    var timestamp = (Date.parse(new Date())/1000) + (3114*8);
-    document.getElementById("44").innerHTML = timestamp%864000;
-</script>
-<script>
-    var timestamp = (Date.parse(new Date())/1000) + (3114*8);
-    document.getElementById("45").innerHTML = timestamp%864000;
-</script>
-<script>
-    var timestamp = (Date.parse(new Date())/1000) + (3114*8);
-    document.getElementById("46").innerHTML = timestamp%864000;
-</script>
-<script>
-    var timestamp = (Date.parse(new Date())/1000) + (3114*8);
-    document.getElementById("47").innerHTML = timestamp%864000;
-</script>
-<script>
-    var timestamp = (Date.parse(new Date())/1000) + (3114*8);
-    document.getElementById("48").innerHTML = timestamp%864000;
-</script>
-<script>
-    var timestamp = (Date.parse(new Date())/1000) + (3114*8);
-    document.getElementById("49").innerHTML = timestamp%864000;
-</script>
-<script>
-    var timestamp = (Date.parse(new Date())/1000) + (3114*8);
-    document.getElementById("50").innerHTML = timestamp%864000;
-</script>
-<script>
-    var timestamp = (Date.parse(new Date())/1000) + (3114*8);
-    document.getElementById("51").innerHTML = timestamp%864000;
-</script>
-<script>
-    var timestamp = (Date.parse(new Date())/1000) + (3114*8);
-    document.getElementById("52").innerHTML = timestamp%864000;
-</script>
-<script>
-    var timestamp = (Date.parse(new Date())/1000) + (3114*8);
-    document.getElementById("53").innerHTML = timestamp%864000;
-</script>
-<script>
-    var timestamp = (Date.parse(new Date())/1000) + (3114*8);
-    document.getElementById("54").innerHTML = timestamp%864000;
-</script>
-<script>
-    var timestamp = (Date.parse(new Date())/1000) + (3114*8);
-    document.getElementById("55").innerHTML = timestamp%864000;
-</script>
-<script>
-    var timestamp = (Date.parse(new Date())/1000) + (3114*8);
-    document.getElementById("56").innerHTML = timestamp%864000;
-</script>
-<script>
-    var timestamp = (Date.parse(new Date())/1000) + (3114*8);
-    document.getElementById("57").innerHTML = timestamp%864000;
-</script>
-<script>
-    var timestamp = (Date.parse(new Date())/1000) + (3114*8);
-    document.getElementById("58").innerHTML = timestamp%864000;
-</script>
-<script>
-    var timestamp = (Date.parse(new Date())/1000) + (3114*8);
-    document.getElementById("59").innerHTML = timestamp%864000;
-</script>
-<script>
-    var timestamp = (Date.parse(new Date())/1000) + (3114*8);
-    document.getElementById("60").innerHTML = timestamp%864000;
-</script>
-<script>
-    var timestamp = (Date.parse(new Date())/1000) + (3114*8);
-    document.getElementById("61").innerHTML = timestamp%864000;
-</script>
-<script>
-    var timestamp = (Date.parse(new Date())/1000) + (3114*8);
-    document.getElementById("62").innerHTML = timestamp%864000;
-</script>
-<script>
-    var timestamp = (Date.parse(new Date())/1000) + (3114*8);
-    document.getElementById("63").innerHTML = timestamp%864000;
-</script>
-<script>
-    var timestamp = (Date.parse(new Date())/1000) + (3114*8);
-    document.getElementById("64").innerHTML = timestamp%864000;
-</script>
-<script>
-    var timestamp = (Date.parse(new Date())/1000) + (3114*8);
-    document.getElementById("65").innerHTML = timestamp%864000;
-</script>
-<script>
-    var timestamp = (Date.parse(new Date())/1000) + (3114*8);
-    document.getElementById("66").innerHTML = timestamp%864000;
-</script>
-<script>
-    var timestamp = (Date.parse(new Date())/1000) + (3114*8);
-    document.getElementById("67").innerHTML = timestamp%864000;
-</script>
-<script>
-    var timestamp = (Date.parse(new Date())/1000) + (3114*8);
-    document.getElementById("68").innerHTML = timestamp%864000;
-</script>
-<script>
-    var timestamp = (Date.parse(new Date())/1000) + (3114*8);
-    document.getElementById("69").innerHTML = timestamp%864000;
-</script>
-<script>
-    var timestamp = (Date.parse(new Date())/1000) + (3114*8);
-    document.getElementById("70").innerHTML = timestamp%864000;
-</script>
-<script>
-    var timestamp = (Date.parse(new Date())/1000) + (3114*8);
-    document.getElementById("71").innerHTML = timestamp%864000;
-</script>
 </body></html>
