--- a/index.html
+++ b/index.html
@@ -1,18 +1,16 @@
 <!DOCTYPE html>
-<!-- saved from url=(0029)https://space.bilibili.com/388476908 -->
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<meta charset="utf-8">
-<meta http-equiv="pragma" content="no-cache"> 
-<meta http-equiv="Cache-Control" content="no-store, must-revalidate"> 
-<meta http-equiv="expires" content="0">
-<title>GouJiLe游戏</title>
+<html lang="zh-CN">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>Xin游戏</title>
 <meta name="keywords" content="">
 <meta name="description" content="JX游戏频道为您提供。">
 <meta name="viewport" content="width=device-width,initial-scale=1, minimum-scale=1.0, maximum-scale=1, user-scalable=no">
 <link rel="stylesheet" href="./img/index1/comm.css">
 <link rel="stylesheet" type="text/css" href="./img/index1/info.css" media="screen, projection">
 <script>
-document.domain = 'mp.9g.com';
+document.domain = 'xjxwx01';
 </script>
 <style type="text/css">
 <!--
