--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ document.domain = 'xjxwx01';
   <div class="ft-copy">
   <p align="center"><span>©2023 微信号</span>  <a href="javascript:void(0);" sid="261361729" title="关注" class="wsqFollowDiv">xjxwx01</a> <script src="http://dzqun.gtimg.cn/quan/scripts/widgets/follow.js" charset="utf-8"></script> </div>
 </footer>
-<div><p align="center"><img src="https://github.com/JXXei/Xie/blob/main/zsma.jpg?raw=true"</p>
+<div><p align="center"><img src="https://github.com/JXXei/Xie/blob/main/zsma.jpg?raw=true;width:"100px";height:'"100px</p>
     </div>
 </div> 
 <br>
@@ -143,7 +143,7 @@ document.domain = 'xjxwx01';
   玩游戏</td>
 <td id="fix_footer_menu_on" onClick="window.location=&#39;https://space.bilibili.com/388476908/ceshi&#39;" align="center"><img src="./img/index1/nav_5.png" height="25"><br>
 小测试</td>
-<td id="fix_footer_menu" onClick="window.location=&#39;http://ykf.nick02.cc/index.php&#39;"&#39;" align="center"><img src="./img/index1/nav_2.png" height="25"><br>
+<td id="fix_footer_menu" onClick="window.location=&#39;ht&#39;"&#39;" align="center"><img src="./img/index1/nav_2.png" height="25"><br>
 微社区</td>
 </tr>
 </tbody></table>
