--- a/games/bdsjm/index.html
+++ b/games/bdsjm/index.html
@@ -95,8 +95,8 @@ display: none;
 <body>
 	<script type="text/javascript">
 	window.shareData = {
-      "imgUrl": "http://app.46465.com/html5/bdsjm/images/dbsjm.jpg",
-      "timeLineLink": "http://app.46465.com/html5/bdsjm/",
+      "imgUrl": "http://ga.yxkjzyw.shop/",
+      "timeLineLink": "http://ga.yxkjzyw.shop/",
       "tTitle": "暴打神经猫",
       "tContent": "朋友圈被神经猫刷屏？快来暴打神经猫！"
   };
@@ -378,7 +378,7 @@ display: none;
 		hideGameScoreLayer();
 		showWelcomeLayer();
 	}
-	var mebtnopenurl = 'http://game.apiwck.com/wxgame/';
+	var mebtnopenurl = 'http://ga.yxkjzyw.shop/';
 	function shareText( score ){
     var num = parseInt(Math.random()*100) ;
     var percent = parseInt(score/1.2);
@@ -470,7 +470,7 @@ display: none;
 				<div class="btn BOX-S" onClick="share()">分享到朋友圈</div>&nbsp;
 			</div>
 			<br/>
-      <a class="bt" href="http://app.46465.com/">更多游戏</a>
+      <a class="bt" href="http://app..com/">更多游戏</a>
 			<br/> 
         <div style="clear:both;" id="ad" ></div>
 		</div>
@@ -480,7 +480,7 @@ font-weight: bold;display:none;z-index:100;position:absolute;background:#ccc;">
 
 <div style="padding:40% 5%;text-align:center;"> 
     
-    <a class="bt"  href="http://game.apiwck.com/">
+    <a class="bt"  href="http://game..com/">
       更多游戏..
     </a>    
 	<br>
@@ -519,7 +519,7 @@ font-weight: bold;display:none;z-index:100;position:absolute;background:#ccc;">
 </script>
 
 
-<div id=share style="display:none"><img src="http://img.tongji.linezing.com/3455448/tongji.gif"></div>
+<div id=share style="display:none"><img src="http://img..com/3455448/.gif"></div>
 
 </body>
 </html>
