--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 <meta name="description" content="JX游戏频道为您提供。">
 <meta name="viewport" content="width=device-width,initial-scale=1, minimum-scale=1.0, maximum-scale=1, user-scalable=no">
 <link rel="stylesheet" href="./img/index1/comm.css">
-<link rel="stylesheet" type="text/css" href="./img/index1/info.css" media="screen, projection">
+<link rel="stylesheet" href="./style.css">
 <script>
 document.domain = 'xjxwx01';
 </script>
-<style type="text/css">
+<style type=""D:\学习\织梦网\各行业网站源码带预览图【适合开发人员用】\1400套\1\style.css"">
 <!--
 #Layer1 {
 	position:absolute;
@@ -114,6 +114,38 @@ document.domain = 'xjxwx01';
 <div><p align="center"><img src="https://github.com/JXXei/Xie/blob/main/zs.jpg?raw=true;width:"100px";height:'"100px</p>
     </div>
 <div> <iframe src="https://www.720yun.com/vr/712jO54wuk4" frameborder="no" width="700" height="500"></iframe></div>
+<div class="container">
+  <div class="item">
+    <div class="quote">
+      <p>I am Groot.<span>Groot</span></p>
+    </div>
+  </div>
+  <div class="item">
+    <div class="quote">
+      <p>You'r the head of security and your password is 'password'&nbsp;?<span>Peter Parker</span></p>
+    </div>
+  </div>
+  <div class="item">
+    <div class="quote">
+      <p>That really is America's ass.<span>Captain America</span></p>
+    </div>
+  </div>
+  <div class="item">
+    <div class="quote">
+      <p>The hardest choices require the strongest wills.<span>Thanos</span></p>
+    </div>
+  </div>
+  <div class="item">
+    <div class="quote">
+      <p>Genius, billionaire, playboy, philanthropist.<span>Tony Stark</span></p>
+    </div>
+  </div>
+  <div class="item">
+    <div class="quote">
+      <p>We never lose our demons. We only learn to live above them.<span>Ancient One</span></p>
+    </div>
+  </div>
+</div>
 </div> 
 <br>
 <br>
